--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,24 @@
 body {
     background-color: rgb(223, 223, 223);
+    min-height: 100vh;
+    padding: 0;
 }
 
 html, body {
     height: 100%;
+    max-height: 100%;
 }
 
 #root {
+    max-height: 100%; 
     min-height: 100%; 
     display: flex;
+}
+
+.undreline-link:hover {
+    text-decoration: underline;
+}
+
+.undreline-link {
+    cursor: pointer;
 }
