--- a/src/styles.css
+++ b/src/styles.css
@@ -22,3 +22,10 @@ html, body {
 .undreline-link {
     cursor: pointer;
 }
+
+.code-line-numbers {
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+}
